filter title layout

--- a/rosbagsApp/templates/rosbagsApp/list.html
+++ b/rosbagsApp/templates/rosbagsApp/list.html
@@ -197,14 +197,14 @@
         <div class="col">
             <div id="topic_filter" class="card h-100" style="width: 24rem;">
                 <div class="card-body">
-                    <p>Required topics:</p>
+                    <h6 class="card-title">Required topics:</h6>
                 </div>
             </div>
         </div>
         <div class="col">
             <div id="tag_filter" class="card h-100" style="width: 24rem;">
                 <div class="card-body">
-                    <p>Required tags:</p>
+                    <h6 class="card-title">Required tags:</h6>
                 </div>
             </div>
         </div>
