display description in detail view

--- a/rosbagsApp/templates/rosbagsApp/detail_view.html
+++ b/rosbagsApp/templates/rosbagsApp/detail_view.html
@@ -30,6 +30,7 @@
     <h2>Metadata</h2>
 
     <ul>
+        <li>Description: {{ bag.description }}</li>
         <li>Start time: {{ bag.recording_date }}</li>
         <li>Duration: {{ bag.duration }}</li>
         <li> Topics:
