add todo: filters not updated when using browser navigation

--- a/rosbagsApp/templates/rosbagsApp/list.html
+++ b/rosbagsApp/templates/rosbagsApp/list.html
@@ -9,6 +9,9 @@
     <script src="https://unpkg.com/lunr@2.3.9/lunr.js"></script>
 
     <script>
+
+        // TODO: When using browser navigation, filters are restored but list shows all bags
+
         /**
          * Clear and (re-)populate the table with the provided ROS bags
          * @param bags List of ROS bags
