deployment ansible bs

--- a/deployment/.env.j2
+++ b/deployment/.env.j2
@@ -1,3 +1,3 @@
-GITLAB_KEY={{ gitlab_key }}
-GITLAB_SECRET={{ gitlab_secret }}
-SECRET_KEY={{ django_secret }}
+GITLAB_KEY="{{ gitlab_key }}"
+GITLAB_SECRET="{{ gitlab_secret }}"
+SECRET_KEY="{{ django_secret }}"
