--- a/deployment/nginx_config.j2
+++ b/deployment/nginx_config.j2
@@ -2,7 +2,7 @@ server {
     server_name {{ domain }};
 
     location /static/ {
-        root /var/www/rosbagBrowser;
+        root /django_static;
     }
     location / {
         include proxy_params;
