implement ability to find bags in subdirectories of bagstorage

--- a/rosbagsApp/templates/rosbagsApp/detail_view.html
+++ b/rosbagsApp/templates/rosbagsApp/detail_view.html
@@ -27,7 +27,7 @@
         </button>
     </div>
 
-    <a href="{% url "rosbags:generate_thumbnails" %}?bag_name={{ bag.name }}">Create Thumbnails (WIP)</a>
+    <a href="{% url "rosbags:generate_thumbnails" %}?bag_path={{ bag.rel_path }}">Create Thumbnails (WIP)</a>
 
     <h2>Metadata</h2>
 
