--- a/rosbagsApp/templates/rosbagsApp/list.html
+++ b/rosbagsApp/templates/rosbagsApp/list.html
@@ -24,7 +24,8 @@
             const tag_template = document.getElementById("tag_template");
 
             for (const bag of bags) {
-                const bag_url = "{% url "rosbags:detail" "bag_name_placeholder" %}".replace(/bag_name_placeholder/, bag.name);
+                const bag_url = "{% url "rosbags:detail" "bag_name_placeholder" %}"
+                    .replace(/bag_name_placeholder/, encodeURIComponent(bag.path));
 
                 let new_row = table.insertRow();
                 let name_cell = new_row.insertCell();
